--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
 							    <ul class="resume-social list-unstyled">
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/sabokrou</a></li>
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/sabokrou</a></li>
-					                <li><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>sabokrou.github.io</a></li>
+					                <li class="mb-3"><a class="text-link" href="https://linkedin.com/in/sabokrou"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/sabokrou</a></li>
+					                <li class="mb-3"><a class="text-link" href="https://github.com/sabokrou"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/sabokrou</a></li>
+					                <li><a class="text-link" href="https://sabokrou.github.io"><span class="fa-container text-center me-2"><i class="fas fa-globe"></i></span>Sabokrou.github.io</a></li>
 							    </ul>
 						    </div><!--//secondary-info-->
 					    </div><!--//row-->
