--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
 							    <ul class="list-unstyled">
 								    <li class="mb-2">
 								        <div class="resume-degree font-weight-bold">Ph.D. in Artificial Intelligence</div>
-								        <div class="resume-degree-org">Malek-Ashtar University of Technology</div>
+								        <div class="resume-degree-org">Supervisor: Prof: Mahmood Fathy</div>
 								        <div class="resume-degree-time">2013 - 2017</div>
 								    </li>
 								    <li class="mb-2">
 								        <div class="resume-degree font-weight-bold">Master in Artificial Intelligence</div>
-								        <div class="resume-degree-org">Malek-Ashtar University of Technology</div>
+								        <div class="resume-degree-org">Supervisor: Prof: Mahmood Fathy</div>
 								        <div class="resume-degree-time">2011 - 2013</div>
 								    </li>
 								    <li>
