--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
   <div class="about-me">
     <h4 id="section-1">About Me</h4>
           <p>
-		  I am an AI researcher, with a primary focus on the dynamic interplay between Computer Vision and Machine Learning. My particular emphasis is on cultivating trustworthiness within these realms. My educational background includes a Ph.D. and a Master's degree in Artificial Intelligence, complemented by a Bachelor's degree in Computer Science.
+		 
+Welcome to my homepage! I am an AI researcher driven by a deep curiosity about the intricate relationship between Computer Vision and Machine Learning. My passion lies in fostering trust within these domains, ensuring that the cutting-edge technologies we develop remain reliable and ethical.  I hold a Ph.D. and a Master's degree in Artificial Intelligence, complemented by a Bachelor's degree in Computer Science.
 
-Currently, I am  to hold the position of Staff Scientist within the Machine Learning and Data Science (MLDS) unit (Prof. Makoto Yamada unit) at the  Okinawa Institute of Science and Technology (OIST) in Okinawa, Japan. Prior to this role, I served as a faculty member at the School of Computer Science, Institute for Research in Fundamental Sciences (IPM), located in Tehran, Iran. During this tenure, I had the privilege of leading the AI group, contributing to its growth and advancement.
+I am proud to hold the esteemed position of Staff Scientist within the Machine Learning and Data Science (MLDS) unit, led by Prof. Makoto Yamada, at the Okinawa Institute of Science and Technology (OIST) in picturesque Okinawa, Japan. Here, I continue to delve into the ever-evolving landscape of AI, contributing to groundbreaking research and innovation.
 
-Moreover, my professional journey encompassed the role of Senior Researcher at the esteemed Center for Machine Vision and Signal Analysis (CMVS) situated at the University of Oulu in Finland and Troyes university in France.
-          </p>
+My journey has been rich and diverse. Prior to my role at OIST, I served as a faculty member at the  School of Computer Science, Institute for Research in Fundamental Sciences (IPM), situated in vibrant Tehran, Iran. During this career chapter, I had the privilege of leading the AI group, playing a pivotal role in its growth and advancement.
+
+I've also been a Senior Researcher at the renowned Center for Machine Vision and Signal Analysis (CMVS), housed within the University of Oulu in Finland and Troyes University in France.   </p>
           <p style="color: red; font-weight: bold;">
              I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mailto:mohamamd.sabokrou@oist.jp">mohamamd.sabokrou@oist.jp</a>.
            </p>
@@ -123,7 +125,7 @@ Moreover, my professional journey encompassed the role of Senior Researcher at t
             <li>Solale Mohammadi, [Sharif University of Technology], [2023-Present] - Project: Backdoor attack for Videos</li>
             <li>Parsa Hosseini, [Sharif University of Technology], [2023-Present] - Project: Revealing the biase of pre-trained model</li>
             <li>Pengfei Li, [Michigan State University], [2023-2023] - Project: Backdoor Attack</li>
-            <li>Naghmeh Jamali, [IPM], [2022–Present] - Project: Continual learnign</li>
+            <li>Naghmeh Jamali, [IPM], [2022–Present] - Project: Continual learning </li>
             <li>Dorsa Asgarian, [IPM], [2023–Present] - Project: XAI</li>
             <li>Mahdi Mehmanchi, [Tehran University], [2023–Present] - Project: Fairness</li>
             <li>Mohamamd Khalooie, [Amirk-Kabir University], [2018–Present] - Project: Anomaly Detection</li>
@@ -135,14 +137,14 @@ Moreover, my professional journey encompassed the role of Senior Researcher at t
         <ul>
             <li>Mojgan Pourkeshavars, [IPM], [2020–2022] • Project: Continual Learning • Current Position: Research Scientist at Huawei Noah’s Ark Lab</li>
             <li>MohammadReza Salehi, [IPM], [2020–2022] • Project: Near OOD Detection • Current Position: Ph.D. Amsterdam University</li>
-            <li>Negin Babaieha, [2020–2022] • Project: Video Understanding for Anomaly Detection • Current Position: Ph.D. students at Bonn University</li>
+            <li>Negin Babaieha, [IPM], [2020–2022] • Project: Video Understanding for Anomaly Detection • Current Position: Ph.D. students at Bonn University</li>
             <li>Fatemeh Jabbari, [IPM], [2021–2022] • Project: Backdoor attack • Current Position: Ph.D. students at Bonn University</li>
         </ul>
 
         <h5>PhD Students:</h5>
         <ul>
             <li>Marzieh Esmaeili, [Tehran University of Medical Sciences], [2020–Present] – Thesis: Anomaly Detection in Medical Imaging</li>
-            <li>Mohammad Shahverdy, [Iran University of Science and Technology], [2017–2020] – Thesis: Driver behaviours detection and categorization.</li>
+            <li>Mohammad Shahverdy, [Iran University of Science and Technology], [2017–2020] – Thesis: Driver behaviors detection and categorization.</li>
         </ul>
 
         <h5>Master Students:</h5>
