--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--Image and title-->
   <img class="profile-img"src="profile.jpg" alt="progile image"/>
   <div class="header-info">
-    <h1>Mohammad Saboukro</h1>
+    <h1>Mohammad Sabokrou</h1>
     <h3>Staff Research Scintist at OIST</h3>
   </div>
   <div class="h-line"></div>
@@ -54,7 +54,7 @@ My journey has been rich and diverse. Prior to my role at OIST, I served as a fa
 
 I've also been a Senior Researcher at the renowned Center for Machine Vision and Signal Analysis (CMVS), housed within the University of Oulu in Finland and Troyes University in France.   </p>
           <p style="color: red; font-weight: bold;">
-             I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mailto:mohamamd.sabokrou@oist.jp">mohamamd.sabokrou@oist.jp</a>.
+             I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mailto:mohammad.sabokrou@oist.jp">mohamamd.sabokrou@oist.jp</a>.
            </p>
   </div>
     
