--- a/index.html
+++ b/index.html
@@ -53,9 +53,19 @@ I am proud to hold the esteemed position of Staff Scientist within the Machine L
 My journey has been rich and diverse. Prior to my role at OIST, I served as a faculty member at the  School of Computer Science, Institute for Research in Fundamental Sciences (IPM), situated in vibrant Tehran, Iran. During this career chapter, I had the privilege of leading the AI group, playing a pivotal role in its growth and advancement.
 
 I've also been a Senior Researcher at the renowned Center for Machine Vision and Signal Analysis (CMVS), housed within the University of Oulu in Finland and Troyes University in France.   </p>
-          <p style="color: red; font-weight: bold;">
-             I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mailto:mohammad.sabokrou@oist.jp">mohamamd.sabokrou@oist.jp</a>.
-           </p>
+<p style="color: red; font-weight: bold;">
+    Two papers accepted for presentation at CVPR2024.
+</p>
+<p style="color: red; font-weight: bold;">
+    Our paper titled "Killing it with Zero-Shot: Adversarially Robust Novelty Detection" was accepted to ICASSP2024.
+</p>
+<p style="color: red; font-weight: bold;">
+    Our paper on mitigating background bias risk was accepted to ACML2024.
+</p>
+<p style="color: blue; font-weight: bold;">
+    I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mailto:mohammad.sabokrou@oist.jp">mohammad.sabokrou@oist.jp</a>.
+</p>
+
   </div>
     
 
