--- a/publications.html
+++ b/publications.html
@@ -64,6 +64,16 @@
     
         <h4 class="title-2">Selected Papers:</h4>
         <ul>
+          <li>
+
+Hossein Mirzaei, Mojtaba Nafez, Mohammad Jafari, Mohammad Bagher Soltani, Mohammad Azizmalayeri, Jafar Habibi, Mohammad Sabokrou, Mohammad Hossein Rohban, Universal Novelty Detection through Adaptive Contrastive Learning, CVPR2024<li>
+         <li>M Pourkeshavarz, M Sabokrou, A Rasouli,Adversarial Backdoor Attack by Naturalistic Data Poisoning on Trajectory Prediction in Autonomous Driving
+
+CVPR2024</li>
+          <li>Killing it with Zero-Shot: Adversarially Robust Novelty Detection, ICASSP</li>
+          <li>R Ahmadi, MJ Rajabi, M Khalooie, M Sabokrou, Mitigating Bias: Enhancing Image Classification by Improving Model Explanations
+
+ACML</li>
             <li>
                 Mirzaei, H., Salehi, M., Shahabi, S., Gavves, E., Snoek, C. G. M., Sabokrou, M., Rohban, M. H.
                 (2023). Fake it till you make it: Near-distribution novelty detection by score-based generative models.
