--- a/index.html
+++ b/index.html
@@ -276,8 +276,11 @@
       
 
       <section class="page__content" itemprop="text">
-        <p>Welcome to my homepage! I am an AI researcher driven by a deep curiosity about the intricate relationship between Computer Vision and Machine Learning. My passion lies in fostering trust within these domains, ensuring that the cutting-edge technologies we develop remain reliable and ethical. I hold a Ph.D. and a Master’s degree in Artificial Intelligence, complemented by a Bachelor’s degree in Computer Science. I am proud to hold the esteemed position of Staff Scientist within the Machine Learning and Data Science (MLDS) unit, led by Prof. Makoto Yamada, at the Okinawa Institute of Science and Technology (OIST) in picturesque Okinawa, Japan. Here, I continue to delve into the ever-evolving landscape of AI, contributing to groundbreaking research and innovation. My journey has been rich and diverse. Prior to my role at OIST, I served as a faculty member at the School of Computer Science, Institute for Research in Fundamental Sciences (IPM), situated in vibrant Tehran, Iran. During this career chapter, I had the privilege of leading the AI group, playing a pivotal role in its growth and advancement. I’ve also been a Senior Researcher at the renowned Center for Machine Vision and Signal Analysis (CMVS), housed within the University of Oulu in Finland and Troyes University in France.</p>
+        <p>Welcome to my homepage, where I delve into the intriguing intersection of Computer Vision and Machine Learning. With a background in Artificial Intelligence, I've had the privilege of contributing to research endeavors aimed at fostering trust and ethical practices within these domains.
 
+Currently, I am grateful to be a part of the MLDS unit at the Okinawa Institute of Science and Technology (OIST), benefiting from the guidance of Prof. Makoto Yamada. This journey has provided me with the opportunity to engage in groundbreaking research, striving to make modest yet meaningful contributions to the field.
+
+Prior to joining OIST, I had the honor of teaching and leading AI initiatives at the Institute for Research in Fundamental Sciences (IPM) in Tehran, Iran. Additionally, I've been fortunate to work as a Senior Researcher at esteemed institutions such as the Center for Machine Vision and Signal Analysis (CMVS) in Finland and France.</p>
 <h1 id="latest-news">Latest News</h1>
 <ul>
   <li>Two papers accepted for presentation at CVPR2024.</li>
