--- a/index.html
+++ b/index.html
@@ -278,11 +278,12 @@
       <section class="page__content" itemprop="text">
         <p>Welcome to my homepage, where I delve into the intriguing intersection of Computer Vision and Machine Learning. With a background in Artificial Intelligence, I've had the privilege of contributing to research endeavors aimed at fostering trust and ethical practices within these domains.
 
-Currently, I am grateful to be a part of the MLDS unit at the Okinawa Institute of Science and Technology (OIST), benefiting from the guidance of Prof. Makoto Yamada. This journey has provided me with the opportunity to engage in groundbreaking research, striving to make modest yet meaningful contributions to the field.
+ I am grateful to be a part of the MLDS unit at the Okinawa Institute of Science and Technology (OIST), benefiting from the guidance of Prof. Makoto Yamada. This journey has provided me with the opportunity to engage in groundbreaking research, striving to make modest yet meaningful contributions to the field.
 
-Prior to joining OIST, I had the honor of teaching and leading AI initiatives at the Institute for Research in Fundamental Sciences (IPM) in Tehran, Iran. Additionally, I've been fortunate to work as a Senior Researcher at esteemed institutions such as the Center for Machine Vision and Signal Analysis (CMVS) in Finland and France.</p>
+Before joining OIST, I had the honor of teaching and leading AI initiatives at the Institute for Research in Fundamental Sciences (IPM) in Tehran, Iran. Additionally, I've been fortunate to work as a Senior Researcher at esteemed institutions such as the Center for Machine Vision and Signal Analysis (CMVS) in Finland and France.</p>
 <h1 id="latest-news">Latest News</h1>
 <ul>
+  <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
   <li>Our paper titled “Killing it with Zero-Shot: Adversarially Robust Novelty Detection” was accepted to ICASSP2024.</li>
   <li>Our paper on mitigating background bias risk was accepted to ACML2024.</li>
