--- a/index.html
+++ b/index.html
@@ -281,7 +281,13 @@
  I am grateful to be a part of the MLDS unit at the Okinawa Institute of Science and Technology (OIST), benefiting from the guidance of Prof. Makoto Yamada. This journey has provided me with the opportunity to engage in groundbreaking research, striving to make modest yet meaningful contributions to the field.
 
 Before joining OIST, I had the honor of teaching and leading AI initiatives at the Institute for Research in Fundamental Sciences (IPM) in Tehran, Iran. Additionally, I've been fortunate to work as a Senior Researcher at esteemed institutions such as the Center for Machine Vision and Signal Analysis (CMVS) in Finland and France.</p>
-<h1 id="latest-news">Latest News</h1>
+
+        <h1 id="join-us">Join Us</h1>
+<p>"I am actively seeking new collaborators. If you are interested, please feel free to reach out to me via email at <a href="mohammad.sabokrou@oist.jp">mohammad.sabokrou@oist.jp. Additionally, we currently have open Postdoctoral positions and several internship opportunities available at MLDS. For the postdoctoral positions, a strong publication record in top journals and conferences such as ICML, ICLR, CVPR, ECCV, ICCV, IJCAI, T-PAMI, IJCV, JMLR, and TMLR is required. </a>.</p>
+
+        
+        
+        <h1 id="latest-news">Latest News</h1>
 <ul>
   <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
@@ -289,8 +295,6 @@ Before joining OIST, I had the honor of teaching and leading AI initiatives at t
   <li>Our paper on mitigating background bias risk was accepted to ACML2024.</li>
 </ul>
 
-<h2 id="join-us">Join Us</h2>
-<p>I am actively seeking new collaborators. If you are interested, feel free to drop me an email at <a href="mohammad.sabokrou@oist.jp">mohammad.sabokrou@oist.jp</a>.</p>
 
 <h2 id="research-interests">Research Interests</h2>
 <ul>
