--- a/index.html
+++ b/index.html
@@ -283,7 +283,11 @@
 Before joining OIST, I had the honor of teaching and leading AI initiatives at the Institute for Research in Fundamental Sciences (IPM) in Tehran, Iran. Additionally, I've been fortunate to work as a Senior Researcher at esteemed institutions such as the Center for Machine Vision and Signal Analysis (CMVS) in Finland and France.</p>
 
         <h1 id="join-us">Join Us</h1>
-<p>"I am actively seeking new collaborators. If you are interested, please feel free to reach out to me via email at <a href="mohammad.sabokrou@oist.jp">mohammad.sabokrou@oist.jp. Additionally, we currently have open Postdoctoral positions and several internship opportunities available at MLDS. For the postdoctoral positions, a strong publication record in top journals and conferences such as ICML, ICLR, CVPR, ECCV, ICCV, IJCAI, T-PAMI, IJCV, JMLR, and TMLR is required. </a>.</p>
+<p>I am actively seeking new collaborators. If you are interested, please feel free
+  to reach out to me via email at <a href="mohammad.sabokrou@oist.jp">mohammad.sabokrou@oist.jp </a>
+    Additionally, we currently have open Postdoctoral positions and several internship opportunities
+    available at MLDS. For the postdoctoral positions, a strong publication record in top journals and 
+    conferences such as ICML, ICLR, CVPR, ECCV, ICCV, IJCAI, T-PAMI, IJCV, JMLR, and TMLR is required.</p>
 
         
         
