--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Before joining OIST, I had the honor of teaching and leading AI initiatives at t
 
         
         
-        <h1 id="latest-news">Latest News</h1>
+        <h2 id="latest-news">Latest News</h2>
 <ul>
   <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
@@ -302,33 +302,11 @@ Before joining OIST, I had the honor of teaching and leading AI initiatives at t
 
 <h2 id="research-interests">Research Interests</h2>
 <ul>
-  <li>Machine Learning Trustworthiness
-    <ul>
-      <li>Fairness</li>
-      <li>Backdoor Attacks</li>
-      <li>Explainable AI (XAI)</li>
-      <li>Membership Inference Attacks</li>
-      <li>Memorization</li>
-    </ul>
+  <li>Machine Learning Trustworthines
   </li>
-  <li>Anomaly Detection
-    <ul>
-      <li>Novelty Detection</li>
-      <li>Out-of-Distribution (OOD)</li>
-      <li>Open Set Recognition</li>
-      <li>Selective Classifier</li>
-      <li>Irregularity Detection</li>
-    </ul>
+  <li> Anomaly Detection/OOD detection
   </li>
-  <li>Continual Learning
-    <ul>
-      <li>Memorization/Generalization in Continual Learning
-        <ul>
-          <li>Robustness in Continual Learning</li>
-        </ul>
-      </li>
-    </ul>
-  </li>
+  <li>Continual Learning/lifelong learnin </li>
 </ul>
 
 
