--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ Before joining OIST, I had the honor of teaching and leading AI initiatives at t
   </li>
   <li> Anomaly Detection/OOD detection
   </li>
-  <li>Continual Learning/lifelong learnin </li>
+  <li>Continual Learning/lifelong learning </li>
 </ul>
 
 
