--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
         
         <h2 id="latest-news">Latest News</h2>
 <ul>
+   <li><a href="https://arxiv.org/pdf/2406.10617">We archived our new  paper about "Knowledge Exposure method for Anomaly Detection"</a></li>
+
   <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
   <li>Our paper titled “Killing it with Zero-Shot: Adversarially Robust Novelty Detection” was accepted to ICASSP2024.</li>
