--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         
         <h2 id="latest-news">Latest News</h2>
 <ul>
-   <li><a href="https://arxiv.org/pdf/2406.10617">We archived our new  paper about "Knowledge Exposure method for Anomaly Detection"</a></li>
+   <li>We archived our new  paper about <a href="https://arxiv.org/pdf/2406.10617">"Knowledge Exposure method for Anomaly Detection"</a></li>
 
   <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
