--- a/index.html
+++ b/index.html
@@ -289,9 +289,12 @@
         
         <h2 id="latest-news">Latest News</h2>
 <ul>
+  <li>
+
+I will serve as an Area Chair for ICLR 2024."</a></li>
    <li>We archived our new  paper about <a href="https://arxiv.org/pdf/2406.10617">"Knowledge Exposure method for Anomaly Detection"</a></li>
 
-  <li>My proposal for the Kakenhi grant (Early-career) has been accepted. </li>
+  <li>My Kakenhi grant proposal (Early-career)  has been accepted. </li>
   <li>Two papers accepted for presentation at CVPR2024.</li>
   <li>Our paper titled “Killing it with Zero-Shot: Adversarially Robust Novelty Detection” was accepted to ICASSP2024.</li>
   <li>Our paper on mitigating background bias risk was accepted to ACML2024.</li>
