--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 <ul>
   <li>
 
-I will serve as an Area Chair for ICLR 2024."</a></li>
+I will serve as an Area Chair for ICLR 2025</a></li>
    <li>We archived our new  paper about <a href="https://arxiv.org/pdf/2406.10617">"Knowledge Exposure method for Anomaly Detection"</a></li>
 
   <li>My Kakenhi grant proposal (Early-career)  has been accepted. </li>
