--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,6 +1,6 @@
 <div class="list__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">
+    <h2 class="archive__item-title" itemprop="headline">x
       Deep Learning (Postgraduate), 2019-2021, IPM
     </h2>
     <p>Role: Main Lecturer</p>
