--- a/index.html
+++ b/index.html
@@ -311,6 +311,53 @@ I will serve as an Area Chair for ICLR 2025</a></li>
 </ul>
 
 
+ <h2>Students and Research Assistants</h2>
+
+    <h3>Postdoctoral Researchers</h3>
+    <ul>
+        <li>Dr. Fatemeh Aghaeipoor (2020-2023): Investigating XAI by focusing on Transformers</li>
+        <li>Dr. Zahra Rezvani (2020-2023): Local/Global feature analysis in CNNs</li>
+    </ul>
+
+    <h3>Interns</h3>
+    <ul>
+        <li>Solale Mohammadi - Sharif University: Semantic Backdoor Attack for Videos</li>
+        <li>Pengfei He - PhD student, University of Michigan: Sampling for Backdoor Attacks</li>
+        <li>Naghmeh Jamali - Master’s student, IPM: Backdoor Attack for NLP</li>
+        <li>Parsa Hosseini - Bachelor’s student, Sharif University: Brainwash Continual Learning</li>
+        <li>Laura Medinilla - PhD student at KAUST: AI for Genome Analysis</li>
+        <li>Jose Renato Restom Viera - PhD student at MBZUAI: Novelty Category Discovery</li>
+        <li>Alireza Salehi - Master’s student at University of Tehran: Investigating the Robustness of Anomaly Detection using VLM</li>
+        <li>Raha Ahmadi - Bachelor’s student, University of Amirkabir: Mitigating Bias for Image Classification</li>
+        <li>Laila Barakati - Bachelor’s student, University of Amirkabir: Explaining Transformers</li>
+        <li>Mohammad Javad Rajabi - Bachelor’s student, University of Amirkabir: Mitigating Bias for Image Classification</li>
+    </ul>
+
+    <h3>PhD Students</h3>
+    <ul>
+        <li>Mohammad Hajizade (Iran University of Science and Technology, 2018–2024): Lightweight Object Detection using DNN</li>
+        <li>AhmadReza Moradzade (IPM, 2023-Present): Noisy Label Image Classification</li>
+        <li>Marzieh Esmaeil (Tehran University of Medical Sciences, 2020-2024): Anomaly Detection for Medical Imaging</li>
+    </ul>
+
+    <h3>Master Students</h3>
+    <ul>
+        <li>Hossein Rezaie (Iran University of Science and Technology, 2023–Present): OOD Generalization in Continual Learning</li>
+        <li>Reyhane Tavakolian (Tehran Azad University, 2022–2024): Video Anomaly Detection by Semi-Supervised Learning</li>
+        <li>Mohse Fayyaz (MUT, 2016-2017)</li>
+        <li>Mohammad Khalooie (MUT, 2017-2018)</li>
+        <li>Masoud Pourreza (MUT, 2017-2018)</li>
+        <li>Mohammad Hajizadeh Saffar (MUT, 2015-2017)</li>
+    </ul>
+
+    <h3>Research Assistants</h3>
+    <ul>
+        <li>Mohammadreza Salehi (Sharif University, 2021-2022)</li>
+        <li>Hossein Mirzaei (Sharif University, 2022-2024)</li>
+        <li>Fatemeh Jabbari (IPM, 2021–2023)</li>
+        <li>Bahram Mohammadi (Sharif University, 2020-2022)</li>
+        <li>Mozhgan Pourkeshavarz (IPM, 2020-2021)</li>
+    </ul>
 
         
 
