--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ I will serve as an Area Chair for ICLR 2025</a></li>
     <h3>Postdoctoral Researchers</h3>
     <ul>
         <li>Dr. Fatemeh Aghaeipoor (2020-2023): Investigating XAI by focusing on Transformers</li>
-        <li>Dr. Zahra Rezvani (2020-2023): Local/Global feature analysis in CNNs</li>
+        <li>Dr. Zahra Rezvani (2020-2023): Local/Global Feature Analysis in CNNs</li>
     </ul>
 
     <h3>Interns</h3>
@@ -331,6 +331,7 @@ I will serve as an Area Chair for ICLR 2025</a></li>
         <li>Raha Ahmadi - Bachelor’s student, University of Amirkabir: Mitigating Bias for Image Classification</li>
         <li>Laila Barakati - Bachelor’s student, University of Amirkabir: Explaining Transformers</li>
         <li>Mohammad Javad Rajabi - Bachelor’s student, University of Amirkabir: Mitigating Bias for Image Classification</li>
+      <li>Rojina Kashefi - Bachelor’s student, University of Amirkabir: Anomaly detection</li>
     </ul>
 
     <h3>PhD Students</h3>
