--- a/index.html
+++ b/index.html
@@ -345,19 +345,20 @@ I will serve as an Area Chair for ICLR 2025</a></li>
     <ul>
         <li>Hossein Rezaie (Iran University of Science and Technology, 2023–Present): OOD Generalization in Continual Learning</li>
         <li>Reyhane Tavakolian (Tehran Azad University, 2022–2024): Video Anomaly Detection by Semi-Supervised Learning</li>
-        <li>Mohse Fayyaz (MUT, 2016-2017)</li>
-        <li>Mohammad Khalooie (MUT, 2017-2018)</li>
-        <li>Masoud Pourreza (MUT, 2017-2018)</li>
-        <li>Mohammad Hajizadeh Saffar (MUT, 2015-2017)</li>
+        <li>Mohse Fayyaz (MUT, 2016-2017)~~Now: Senior research scientists at Microsoft.</li>
+        <li>Mohammad Khalooie (MUT, 2017-2018)~~Now:PhD student at Amirkabir University.</li>
+        <li>Masoud Pourreza (MUT, 2017-2018)~~Now:Research EngineerResearch Engineer at
+mtl.ai</li>
+        <li>Mohammad Hajizadeh Saffar (MUT, 2015-2017)~~ Now: CTO of Part AI research center</li>
     </ul>
 
     <h3>Research Assistants</h3>
     <ul>
         <li>Mohammadreza Salehi (Sharif University, 2021-2022)</li>
-        <li>Hossein Mirzaei (Sharif University, 2022-2024)</li>
-        <li>Fatemeh Jabbari (IPM, 2021–2023)</li>
-        <li>Bahram Mohammadi (Sharif University, 2020-2022)</li>
-        <li>Mozhgan Pourkeshavarz (IPM, 2020-2021)</li>
+        <li>Hossein Mirzaei (Sharif University, 2022-2024)~~~Now: PhD students at EPFL University</li>
+        <li>Fatemeh Jabbari (IPM, 2021–2023)~~ Now:PhD students at Bonn University.</li>
+        <li>Bahram Mohammadi (Sharif University, 2020-2022)~~Now: PhD students at Adelaide univiersity</li>
+        <li>Mozhgan Pourkeshavarz (IPM, 2020-2021)~~ Now: Research Scientist at Huawei Noah's Ark Lab</li> 
     </ul>
 
         
