--- a/index.html
+++ b/index.html
@@ -353,13 +353,23 @@ mtl.ai</li>
     </ul>
 
     <h3>Research Assistants</h3>
-    <ul>
-        <li>Mohammadreza Salehi (Sharif University, 2021-2022)</li>
-        <li>Hossein Mirzaei (Sharif University, 2022-2024)~~~Now: PhD students at EPFL University</li>
-        <li>Fatemeh Jabbari (IPM, 2021–2023)~~ Now:PhD students at Bonn University.</li>
-        <li>Bahram Mohammadi (Sharif University, 2020-2022)~~Now: PhD students at Adelaide univiersity</li>
-        <li>Mozhgan Pourkeshavarz (IPM, 2020-2021)~~ Now: Research Scientist at Huawei Noah's Ark Lab</li> 
-    </ul>
+<ul>
+    <li>Mohammadreza Salehi (Sharif University, 2021-2022) — Now: PhD student at Amsterdam University 
+        (<a href="https://scholar.google.com/citations?user=kpT3gcsAAAAJ&hl=en&authuser=1">Google Scholar</a>)
+    </li>
+    <li>Hossein Mirzaei (Sharif University, 2022-2024) — Now: PhD student at EPFL University 
+        (<a href="https://scholar.google.com/citations?user=gISaPsoAAAAJ&hl=en">Google Scholar</a>)
+    </li>
+    <li>Fatemeh Jabbari (IPM, 2021–2023) — Now: PhD student at Bonn University 
+       
+    </li>
+    <li>Bahram Mohammadi (Sharif University, 2020-2022) — Now: PhD student at Adelaide University 
+        (<a href="https://scholar.google.com/citations?user=UWmJDhgAAAAJ&hl=en">Google Scholar</a>)
+    </li>
+    <li>Mozhgan Pourkeshavarz (IPM, 2020-2021) — Now: Research Scientist at Huawei Noah's Ark Lab 
+        (<a href="https://scholar.google.com/citations?user=crjO2y8AAAAJ&hl=en">Google Scholar</a>)
+    </li> 
+</ul>
 
         
 
