--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <h2 id="latest-news">Latest News</h2>
 <ul>
 
-  <li>Our paper, titled "Scanning Trojaned Models Using Out-of-Distribution Samples," has been accepted for presentation at NeurIPS</li>
+  <li>Our paper, titled "Scanning Trojaned Models Using Out-of-Distribution Samples," has been accepted for presentation at NeurIPS2024</li>
   <li>
 
 I will serve as an Area Chair for ICLR 2025</a></li>
