--- a/publications/index.html
+++ b/publications/index.html
@@ -264,8 +264,10 @@
 <div class="list__item">
   <article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
     <ul>
+      <li>Hossein Mirzaei, Ali Ansari, Bahar Dibaei Nia, Mojtaba Nafez, Moein Madadi, Sepehr Rezaee, Zeinab Sadat Taghavi, Arad Maleki, Kian Shamsaie, Mahdi Hajialilue, Jafar Habibi, <strong>Mohammad Sabokrou</strong>, & Mohammad Hossein Rohban. Scanning Trojaned Models Using Out-of-Distribution Samples. In NeurIPS, 2024.</li>
   <li>Hossein Mirzaei, Mojtaba Nafez, Mohammad Jafari, Mohammad Bagher Soltani, Mohammad Azizmalayeri, Jafar Habibi, Mohammad Hossein Rohban, <strong>Mohammad Sabokrou</strong>. (2024) Universal Novelty Detection through Adaptive Contrastive Learning. In <i>CVPR</i>.</li>
-  <li>Mozhgan Pourkeshavarz, <strong>Mohammad Sabokrou</strong>, &amp; Amir Rasouli. (2024) Adversarial Backdoor Attack by Naturalistic Data Poisoning on Trajectory Prediction in Autonomous Driving. In <i>CVPR</i>.</li>
+  <li>Mozhgan Pourkeshavarz, <strong>Mohammad Sabokrou</strong>, &amp; Amir Rasouli. (2024) Adversarial Backdoor Attack by Naturalistic Data Poisoning on Trajectory Prediction in Autonomous Driving. In <i>CVPR</i>.
+  </li>
   <li>Mirzaei, H., Salehi, M., Shahabi, S., Gavves, E., Snoek, C. G. M., <strong>Sabokrou</strong>, M., Rohban, M. H. (2023). Fake it till you make it: Near-distribution novelty detection by score-based generative models. In <i>International Conference on Learning Representations (ICLR)</i>.</li>
   <li>Salehi, M., Mirzaei, H., Hendrycks, D., Li, Y., Rohban, M. H., <strong>Sabokrou</strong>, M. (2022). A unified survey on anomaly, novelty, open-set, and out-of-distribution detection: Solutions and future challenges. <i>Transaction on Machine Learning Research (TMLR)</i>.</li>
   <li>Pourkeshavarz, M., Zhao, G., <strong>Sabokrou</strong>, M. (2022). Looking Back on Learned Experiences For Class/task Incremental Learning. In <i>International Conference on Learning Representations (ICLR)</i>.</li>
