--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="author__content">
     <h3 class="author__name">Mohammad Sabokrou</h3>
     
-    <p class="author__bio">Staff Research Scintist</p>
+    <p class="author__bio">Staff Research Scientist</p>
   </div>
 
   <div class="author__urls-wrapper">
