--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
         
         <h2 id="latest-news">Latest News</h2>
 <ul>
+  <li>   Our paper, "Adversarially Robust Anomaly Detection through Spurious Negative Pair Mitigation," has been accepted to ICLR 2025.</li>
 <li>Our "Stealthy Backdoor Attack via Confidence-driven Sampling" paper has been accepted for publication in Transactions on Machine Learning Research (TMLR).</li>
   <li>Our paper, titled "Scanning Trojaned Models Using Out-of-Distribution Samples," has been accepted for presentation at NeurIPS2024</li>
   <li>
