--- a/publications/index.html
+++ b/publications/index.html
@@ -264,7 +264,10 @@
 <div class="list__item">
   <article class="archive__item" itemscope="" itemtype="http://schema.org/CreativeWork">
     <ul>
-      <li>He, P., Xu, H., Xing, Y., Ren, J., Cui, Y., Zeng, S., ... & Sabokrou, M. (2023). Stealthy Backdoor Attack via Confidence-driven Sampling. TMLR2024 <a href="https://openreview.net/pdf?id=Flh5EXz8dA">[paper]</a></li>
+     
+      <li>Mitigating Spurious Negative Pairs for Robust Industrial Anomaly Detection,
+Hossein Mirzaei, Mojtaba Nafez, Jafar Habibi, Mohammad Sabokrou, Mohammad Hossein Rohban (2025), ICLR</li>
+      <li>He, P., Xu, H., Xing, Y., Ren, J., Cui, Y., Zeng, S., ... & Sabokrou, M. (2025). Stealthy Backdoor Attack via Confidence-driven Sampling. TMLR <a href="https://openreview.net/pdf?id=Flh5EXz8dA">[paper]</a></li>
       
       <li>Hossein Mirzaei, Ali Ansari, Bahar Dibaei Nia, Mojtaba Nafez, Moein Madadi, Sepehr Rezaee, Zeinab Sadat Taghavi, Arad Maleki, Kian Shamsaie, Mahdi Hajialilue, Jafar Habibi, <strong>Mohammad Sabokrou</strong>, & Mohammad Hossein Rohban. Scanning Trojaned Models Using Out-of-Distribution Samples. In NeurIPS, 2024.</li>
   <li>Hossein Mirzaei, Mojtaba Nafez, Mohammad Jafari, Mohammad Bagher Soltani, Mohammad Azizmalayeri, Jafar Habibi, Mohammad Hossein Rohban, <strong>Mohammad Sabokrou</strong>. (2024) Universal Novelty Detection through Adaptive Contrastive Learning. In <i>CVPR</i>.</li>
