--- a/index.html
+++ b/index.html
@@ -286,7 +286,16 @@
         
         
         <h2 id="latest-news">Latest News</h2>
-<ul>
+<ul> 
+
+  <li color="red"> Two of my papers have been accepted at NeurIPS 2025: FrameShield: Adversarially Robust Video Anomaly Detection and APML: Adaptive Probabilistic Matching Loss for Robust 3D Point Cloud Reconstruction. </li>
+  <li color="red">Currently Visiting Istanbul Technical University (ITU) for 5 Months</li>
+   <li color="red">
+
+I will serve as an Area Chair for ICLR 2026</a></li>
+  <li color="red">
+
+I will serve as an Area Chair for ICLR 2026</a></li>
   <li>   Our paper, "Adversarially Robust Anomaly Detection through Spurious Negative Pair Mitigation," has been accepted to ICLR 2025.</li>
 <li>Our "Stealthy Backdoor Attack via Confidence-driven Sampling" paper has been accepted for publication in Transactions on Machine Learning Research (TMLR).</li>
   <li>Our paper, titled "Scanning Trojaned Models Using Out-of-Distribution Samples," has been accepted for presentation at NeurIPS2024</li>
