--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,31 +1,170 @@
-<div class="list__item">
-  <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">x
-      Deep Learning (Postgraduate), 2019-2021, IPM
-    </h2>
-    <p>Role: Main Lecturer</p>
-    <p>This course spanned 16 weeks, with 2 sessions of 1.5 hours each week. The course covered classical machine learning, representation learning, autoencoders, convolutional neural networks (CNNs), long short-term memory networks (LSTMs), generative adversarial networks (GANs), and advanced concepts like zero-shot learning and model robustness.</p>
-  </article>
-</div>
+<section class="teaching-section">
+  <h1 class="section-title">Teaching Experience</h1>
 
-<div class="list__item">
-  <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">
-      Advanced Topics in AI (Postgraduate), 2019-2021, IPM
-    </h2>
-    <p>Role: Main Lecturer</p>
-    <p>This 16-week course included 2 sessions of 1.5 hours each week, focusing on contemporary topics in AI trustworthiness, including safety, security, fairness, bias, transparency, adversarial attacks, backdoor attacks, and membership inference attacks. The first 10 weeks were dedicated to lectures, while the remaining 6 weeks involved student presentations on selected top papers, implementation projects, and improvement under my supervision. Evaluation was based on seminars, projects, and a final exam.</p>
-  </article>
-</div>
+  <!-- ITU Istanbul Course -->
+  <div class="course-card">
+    <h2 class="course-title">Deep Learning (Postgraduate), Fall 2025, ITU Istanbul</h2>
+    <p class="role">Role: Main Lecturer</p>
+    <p class="description">
+      A 12-week postgraduate course on deep learning fundamentals and modern architectures, emphasizing theory, 
+      implementation, and research discussions. The course combines weekly lectures, coding sessions, and project work using PyTorch.
+    </p>
 
-<div class="list__item">
-  <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">
-      Advanced Topics in AI: Deep Learning Safety and Security (Postgraduate), 2019, Iran University of Science and Technology
-    </h2>
-    <p>Role: Main Lecturer</p>
-    <p>This course was similar to the ”Advanced Topics in AI” course at IPM, with the same structure and content. The 16-week course also included 2 sessions of 1.5 hours each week, focusing on deep learning safety and security.</p>
-  </article>
-</div>
+    <ul class="syllabus">
+      <li>
+        <strong>Week 1:</strong> Introduction & Fundamentals of Neural Networks  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 2:</strong> Representation Learning  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 3:</strong> Convolutional Neural Networks (CNNs)  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 4:</strong> Sequence Modeling — RNNs and LSTMs  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 5:</strong> Introduction to Transformers  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 6:</strong> Attention Mechanisms & Self-Attention  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 7:</strong> Optimization Techniques in Deep Learning  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 8:</strong> Regularization and Generalization  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 9:</strong> Generative Models — Autoencoders & VAEs  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 10:</strong> Generative Adversarial Networks (GANs)  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 11:</strong> Diffusion Models and Large-Scale Architectures  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+      <li>
+        <strong>Week 12:</strong> Research Topics, Applications & Final Project Presentations  
+        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+      </li>
+    </ul>
+  </div>
 
+  <!-- IPM Deep Learning -->
+  <div class="course-card">
+    <h2 class="course-title">Deep Learning (Postgraduate), 2019–2021, IPM</h2>
+    <p class="role">Role: Main Lecturer</p>
+    <p class="description">
+      A 16-week course with two 1.5-hour sessions per week, covering classical machine learning,
+      representation learning, autoencoders, CNNs, LSTMs, GANs, and advanced topics like zero-shot learning and model robustness.
+    </p>
+  </div>
 
+  <!-- IPM Advanced Topics -->
+  <div class="course-card">
+    <h2 class="course-title">Advanced Topics in AI (Postgraduate), 2019–2021, IPM</h2>
+    <p class="role">Role: Main Lecturer</p>
+    <p class="description">
+      A 16-week course focusing on AI trustworthiness — including safety, security, fairness,
+      bias, transparency, and adversarial robustness. Students participated in paper discussions,
+      research presentations, and implementation projects, with assessments based on seminars, projects, and a final exam.
+    </p>
+  </div>
+
+  <!-- IUST Course -->
+  <div class="course-card">
+    <h2 class="course-title">Advanced Topics in AI: Deep Learning Safety and Security (Postgraduate), 2019, Iran University of Science and Technology</h2>
+    <p class="role">Role: Main Lecturer</p>
+    <p class="description">
+      This 16-week course paralleled the “Advanced Topics in AI” course at IPM, focusing specifically on
+      deep learning safety and security, including adversarial attacks and model robustness.
+    </p>
+  </div>
+</section>
+
+<style>
+  .teaching-section {
+    font-family: "Inter", "Segoe UI", sans-serif;
+    max-width: 850px;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: #fafafa;
+    border-radius: 1rem;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+  }
+
+  .section-title {
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    color: #111827;
+    text-align: center;
+  }
+
+  .course-card {
+    background: #fff;
+    border-left: 5px solid #2563eb;
+    padding: 1.5rem;
+    border-radius: 0.75rem;
+    margin-bottom: 1.5rem;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+  }
+
+  .course-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+  }
+
+  .course-title {
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 0.25rem;
+    color: #1e3a8a;
+  }
+
+  .role {
+    font-weight: 500;
+    color: #444;
+    margin-bottom: 0.5rem;
+  }
+
+  .description {
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 0.75rem;
+  }
+
+  .syllabus {
+    margin-top: 0.75rem;
+    padding-left: 1.2rem;
+    color: #333;
+  }
+
+  .syllabus li {
+    margin-bottom: 0.7rem;
+    line-height: 1.6;
+  }
+
+  .slides-link, .video-link {
+    color: #2563eb;
+    text-decoration: none;
+    font-weight: 500;
+    margin-right: 0.5rem;
+  }
+
+  .slides-link:hover, .video-link:hover {
+    text-decoration: underline;
+  }
+</style>
