--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
         
         <h2 id="latest-news">Latest News</h2>
 <ul> 
+<li color="red">
+
+I will serve as an Area Chair for BMVC 2026</a></li>
 
   <li color="red"> Two  papers have been accepted at NeurIPS 2025: FrameShield: Adversarially Robust Video Anomaly Detection and APML: Adaptive Probabilistic Matching Loss for Robust 3D Point Cloud Reconstruction. </li>
   <li color="red">Currently Visiting Istanbul Technical University (ITU) for 5 Months</li>
