--- a/index.html
+++ b/index.html
@@ -289,6 +289,10 @@
 <ul> 
 <li color="red">
 
+Awarded JSPS KAKENHI (Grants-in-Aid for Scientific Research (B)) totaling ¥20 million for 2026–2030.</a></li>
+  
+<li color="red">
+
 I will serve as an Area Chair for BMVC 2026</a></li>
 
   <li color="red"> Two  papers have been accepted at NeurIPS 2025: FrameShield: Adversarially Robust Video Anomaly Detection and APML: Adaptive Probabilistic Matching Loss for Robust 3D Point Cloud Reconstruction. </li>
