--- a/teaching/index.html
+++ b/teaching/index.html
@@ -12,40 +12,42 @@
 
     <ul class="syllabus">
       <li>
-        <strong>Week 1:</strong> Introduction & Fundamentals of Neural Networks  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 1:</strong> Introduction to Deep Learning  
+        <br><a href="#" class="https://drive.google.com/file/d/1ObKi60EhRLMDAGRcCefUSFlOCJwHVQK4/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 2:</strong> Representation Learning  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 2:</strong> Unsupervised Feature Learning as a Gateway to CNNs 
+        <br><a href="#" class="https://drive.google.com/file/d/1m5hwo67Rh684qEtzRPNBOV97obkArmLn/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
         <strong>Week 3:</strong> Convolutional Neural Networks (CNNs)  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <br><a href="#" class="https://drive.google.com/file/d/1hn9lQJWfaI1mPqkAhgiHWyT2K89k0gIr/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
         <strong>Week 4:</strong> Sequence Modeling — RNNs and LSTMs  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <br><a href="#" class="https://drive.google.com/file/d/1y_ZWsWF4F9IiHwSDG_u4mijc7ynnXSWK/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 5:</strong> Introduction to Transformers  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 5:</strong>  Transformers  
+        <br><a href="#" class="https://drive.google.com/file/d/1H2hzc5nBDPoLomXzb79rQk7NodN5zdTV/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 6:</strong> Attention Mechanisms & Self-Attention  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 6:</strong> Large Language Models, MOE, DeepSeek 
+        <br><a href="#" class="https://drive.google.com/file/d/1nvmmuiXEC1D6UpGWKJyuimW0zWGnAEiy/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 7:</strong> Optimization Techniques in Deep Learning  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 7:</strong> Generative Modeling 
+        <br><a href="#" class="https://drive.google.com/file/d/18yBzFruU3qmtuD5LM8Ww1DkemQTB-_sW/view?usp=sharing">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 8:</strong> Regularization and Generalization  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 8:</strong> Generative Modeling-
+Autoregressive model
+        <br><a href="https://drive.google.com/file/d/1ELpMxgHBJzWGozhpX4FfbKN7WRwVXxlv/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
-        <strong>Week 9:</strong> Generative Models — Autoencoders & VAEs  
-        <br><a href="#" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
+        <strong>Week 9:</strong> Introduction to Normalizing
+Flows and SDE 
+        <br><a href="https://drive.google.com/file/d/1kp1dkEOIDb_1iDvQrEfA302q6idm6HR5/view?usp=sharing" class="slides-link">📘 Slides</a> | <a href="#" class="video-link">🎥 Lecture Video</a>
       </li>
       <li>
         <strong>Week 10:</strong> Generative Adversarial Networks (GANs)  
